--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "final",
   "version": "1.0.0",
   "description": "prog3",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Arno",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.5.3"
   }
 }
